docs/v0.2.9.8/_sources/gallery/extras/scatterer_distribution.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/scatterer_distribution.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_scatterer_distribution.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_scatterer_distribution.py:


Flow Cytometry Simulation and 2D Hexbin Plot of Scattering Intensities
======================================================================

This script simulates a flow cytometer using the FlowCyPy library. It models light scattering from particles
detected by two detectors (Forward Scatter and Side Scatter) and visualizes the scattering intensities in a 2D hexbin plot.

Flow cytometry is used to analyze the physical and chemical properties of particles as they flow through a laser beam.

Steps in the Workflow:
----------------------
1. Define the flow parameters (e.g., speed, area, and total simulation time).
2. Create particle size and refractive index distributions.
3. Set up a laser source and detectors.
4. Simulate the flow cytometry experiment.
5. Visualize the scattering intensity in a 2D hexbin plot.

.. GENERATED FROM PYTHON SOURCE LINES 18-62

.. code-block:: Python


    # Import necessary libraries and modules
    from FlowCyPy import Scatterer, FlowCell
    from FlowCyPy import distribution
    from FlowCyPy.units import second, nanometer, RIU, particle, milliliter, meter, micrometer, millisecond
    import numpy as np

    # Set random seed for reproducibility
    np.random.seed(20)

    # Step 1: Define Flow Parameters
    # ------------------------------
    # The flow speed is set to 7.56 meters per second, with a flow area of 10 micrometers squared, and
    # the total simulation time is 0.1 milliseconds.
    flow_cell = FlowCell(
        flow_speed=7.56 * meter / second,      # Flow speed: 7.56 meters per second
        flow_area=(10 * micrometer) ** 2,      # Flow area: 10 micrometers squared
        run_time=0.1 * millisecond           # Total simulation time: 0.1 milliseconds
    )

    # Step 2: Define Particle Size and Refractive Index Distributions
    # ---------------------------------------------------------------
    # Two particle populations are defined with different sizes and refractive indices.
    scatterer = Scatterer(medium_refractive_index=1.33 * RIU)

    scatterer.add_population(
        name='EV',
        concentration=2e+9 * particle / milliliter,
        size=distribution.RosinRammler(characteristic_size=50 * nanometer, spread=4.5),
        refractive_index=distribution.Normal(mean=1.39 * RIU, std_dev=0.05 * RIU)
    )

    scatterer.add_population(
        name='LP',
        concentration=1e+10 * particle / milliliter,
        size=distribution.RosinRammler(characteristic_size=200 * nanometer, spread=4.5),
        refractive_index=distribution.Normal(mean=1.45 * RIU, std_dev=0.05 * RIU)
    )

    scatterer.initialize(flow_cell=flow_cell)

    # Plot and visualize the scatterer distribution.
    scatterer.plot()




.. image-sg:: /gallery/extras/images/sphx_glr_scatterer_distribution_001.png
   :alt: scatterer distribution
   :srcset: /gallery/extras/images/sphx_glr_scatterer_distribution_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 63-64

Display the properties of the scatterer distribution.

.. GENERATED FROM PYTHON SOURCE LINES 64-73

.. code-block:: Python

    scatterer.print_properties()

    """
    Summary:
    --------
    This script defines a flow cytometer simulation, sets up the particle size and refractive index distributions,
    and visualizes the scatterer distribution in a 2D density plot. It provides insight into the scattering properties
    of two different particle populations.
    """




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    Scatterer [] Properties
    +-----------------------------+----------+
    | Property                    | Value    |
    +=============================+==========+
    | coupling factor             | mie      |
    +-----------------------------+----------+
    | medium refractive index     | 1.3 RIU  |
    +-----------------------------+----------+
    | minimum time between events | 305.1 ps |
    +-----------------------------+----------+
    | average time between events | 72.1 ns  |
    +-----------------------------+----------+

    Population [EV] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | EV                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.390 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(50.000 nm, 4.500)         |
    +------------------+------------------------------+
    | Concentration    | 333.3 Gparticle/l            |
    +------------------+------------------------------+
    | N events         | 23.0 particle                |
    +------------------+------------------------------+

    Population [EV] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | EV                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.450 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(150.000 nm, 10.500)       |
    +------------------+------------------------------+
    | Concentration    | 333.3 Gparticle/l            |
    +------------------+------------------------------+
    | N events         | 25.0 particle                |
    +------------------+------------------------------+

    Population [LP] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | LP                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.450 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(200.000 nm, 10.500)       |
    +------------------+------------------------------+
    | Concentration    | 333.3 Gparticle/l            |
    +------------------+------------------------------+
    | N events         | 19.0 particle                |
    +------------------+------------------------------+

    Population [EV] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | EV                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.390 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(50.000 nm, 4.500)         |
    +------------------+------------------------------+
    | Concentration    | 1.7 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 68.0 particle                |
    +------------------+------------------------------+

    Population [LP] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | LP                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.450 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(200.000 nm, 4.500)        |
    +------------------+------------------------------+
    | Concentration    | 1.7 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 76.0 particle                |
    +------------------+------------------------------+

    Population [Cells] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | Cells                        |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.430 RIU, 0.020 RIU) |
    +------------------+------------------------------+
    | Size             | RR(1000.000 nm, 4.500)       |
    +------------------+------------------------------+
    | Concentration    | 1.7 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 76.0 particle                |
    +------------------+------------------------------+

    Population [EV] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | EV                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.390 RIU, 0.050 RIU) |
    +------------------+------------------------------+
    | Size             | RR(50.000 nm, 4.500)         |
    +------------------+------------------------------+
    | Concentration    | 1.7 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 76.0 particle                |
    +------------------+------------------------------+

    Population [LP] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | LP                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.450 RIU, 0.050 RIU) |
    +------------------+------------------------------+
    | Size             | RR(200.000 nm, 4.500)        |
    +------------------+------------------------------+
    | Concentration    | 1.7 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 76.0 particle                |
    +------------------+------------------------------+

    Population [EV] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | EV                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.390 RIU, 0.050 RIU) |
    +------------------+------------------------------+
    | Size             | RR(50.000 nm, 4.500)         |
    +------------------+------------------------------+
    | Concentration    | 3.3 nmol/m³                  |
    +------------------+------------------------------+
    | N events         | 148.0 particle               |
    +------------------+------------------------------+

    Population [LP] Properties
    +------------------+------------------------------+
    | Property         | Value                        |
    +==================+==============================+
    | Name             | LP                           |
    +------------------+------------------------------+
    | Refractive Index | Normal(1.450 RIU, 0.050 RIU) |
    +------------------+------------------------------+
    | Size             | RR(200.000 nm, 4.500)        |
    +------------------+------------------------------+
    | Concentration    | 16.6 nmol/m³                 |
    +------------------+------------------------------+
    | N events         | 752.0 particle               |
    +------------------+------------------------------+

    '\nSummary:\n--------\nThis script defines a flow cytometer simulation, sets up the particle size and refractive index distributions,\nand visualizes the scatterer distribution in a 2D density plot. It provides insight into the scattering properties\nof two different particle populations.\n'




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.332 seconds)


.. _sphx_glr_download_gallery_extras_scatterer_distribution.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scatterer_distribution.ipynb <scatterer_distribution.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scatterer_distribution.py <scatterer_distribution.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: scatterer_distribution.zip <scatterer_distribution.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
